# diariopy

./: .gitignore  .zenodo.json  404.html  CHANGELOG.md  CITATION.cff  CLAUDE.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  publish.yml
changelog/: index.html
docs/: index.md  reference.md  usage.md
reference/: index.html
search/: search_index.json
src/diariopy/: __init__.py  client.py
tests/: test_request.py  test_validation.py
usage/: index.html
